--- a/index.html
+++ b/index.html
@@ -6,8 +6,35 @@
     <title>Mi portafolio</title>
 </head>
 <body>
-    <h1>Portafolio
-    </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, velit. Sequi obcaecati aut fuga et odio, laborum perferendis dolore maiores. Nemo dolore quia quasi recusandae quis qui culpa, officiis dolorem?</p>
+    <h1>Portafolio</h1>
+    <h2>Subtítulo</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br /> Ipsam, velit. Sequi obcaecati aut fuga et odio, laborum perferendis dolore maiores. <br> Nemo dolore quia quasi recusandae quis qui culpa, officiis dolorem? Sequi obcaecati aut fuga et odio, laborum perferendis dolore maiores. Sequi obcaecati aut fuga et odio, laborum perferendis dolore maiores. <hr>
+    
+    </p>
+        <a href="www.google.cl">Este es un enlace a google</a>
+    <ol>
+        <li>Primero</li>
+        <li>Segundo</li>
+        <li>Tercero</li>
+    </ol>
+    <ul>
+        <li>Primero</li>
+        <li>Segundo</li>
+        <li>Tercero</li>
+    </ul>
+
+    <dl>
+        <dt>Término 1</dt>
+        <dd>Definición</dd>
+        <dt>Término 2</dt>
+        <dd>Definición 2</dd>
+        <dt>Término 3</dt>
+        <dd>Definición 3</dd>
+        <dt>Término 4</dt>
+        <dd>Definición 4</dd>
+    </dl>
+
+    <img src="assets/img/logoPhyton.jpeg" alt="logoPhyton" height="250px" width="250px">
+
 </body>
 </html>
